# Businessverse-AI

./: .gitignore  Makefile  PROJECT_GUIDE.md  README.md  build_log.txt  docker-compose.yml
backend/: Dockerfile  alembic.ini  fix_cp.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: _shared.py  base.py  ceo.py  finance.py  marketing.py  product_manager.py  research.py  sales.py
backend/app/agents/prompts/: __init__.py
backend/app/api/v1/: routes_agents.py  routes_approvals.py  routes_chat.py  routes_company.py  routes_metrics.py  routes_ml.py  routes_simulation.py
backend/app/api/ws/: agent_stream.py
backend/app/core/: events.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial.py
backend/app/graph/: builder.py  checkpoints.py  nodes.py  state.py  supervisor.py  worker.py
backend/app/memory/: checkpointer.py  long_term.py  semantic.py
backend/app/ml/: registry.py
backend/app/ml/artifacts/: churn_latest.pkl  demand_latest.pkl  revenue_latest.pkl  success_latest.pkl
backend/app/ml/train/: train_all.py
backend/app/observability/: metrics.py  tokens.py  tracing.py
backend/app/schemas/: __init__.py
backend/app/services/: simulation_service.py
backend/app/tools/: finance_calc.py  memory_tools.py  ml_predict.py  n8n_trigger.py  web_search.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/lib/: api.js  (+1 more)
infra/nginx/: nginx.conf
(+24 files in other folders)
