[project]
name = "ai-business-simulator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "langchain>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langsmith>=0.1.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "prophet>=1.1.5",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "joblib>=1.4",
    "shap>=0.45",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]